objc_library(
    name = "PINCache",
    srcs = glob(["Source/*.m"], allow_empty = False),
    hdrs = glob(["Source/*.h"], allow_empty = False),
    deps = [
        "@com_github_tinderapp_pinoperation//:PINOperation"
    ],
    copts = [
        "-Wno-deprecated-declarations"
    ],
    visibility = ["//visibility:public"]
)
